[gd_scene load_steps=11 format=3 uid="uid://b1ajr40q17fg5"]

[ext_resource type="PackedScene" uid="uid://8dgw8wdiub72" path="res://scenes/Card/Card.tscn" id="1_0h4xo"]
[ext_resource type="Material" uid="uid://bb4p77g8nmchw" path="res://shader/Foil/dissolvemat.tres" id="2_15rps"]
[ext_resource type="Shader" uid="uid://ya516xim3sm" path="res://shader/dissolve_shader.tres" id="2_hpw4l"]
[ext_resource type="Script" uid="uid://7rcwky80yamc" path="res://scripts/Main Menu/menu_card.gd" id="3_15rps"]
[ext_resource type="Shader" uid="uid://u3dupxupysmg" path="res://shader/Foil/foil.gdshader" id="5_15rps"]
[ext_resource type="Texture2D" uid="uid://dwfea5crud5qh" path="res://shader/Foil/rainbow_gradient_1d.tres" id="6_twisv"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_gnf8m"]
frequency = 0.0017

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_j2pkj"]
noise = SubResource("FastNoiseLite_gnf8m")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gnf8m"]
resource_local_to_scene = true
shader = ExtResource("2_hpw4l")
shader_parameter/Noise = SubResource("NoiseTexture2D_j2pkj")
shader_parameter/dissolve_value = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_twisv"]
resource_local_to_scene = true
shader = ExtResource("5_15rps")
shader_parameter/mouse_position = Vector2(0, 0)
shader_parameter/sprite_position = Vector2(0, 0)
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/inset = 0.0
shader_parameter/max_tilt = 1.0
shader_parameter/max_distance = 500.0
shader_parameter/foilcolor = Color(0, 0, 0, 1)
shader_parameter/threshold = 0.2
shader_parameter/fuzziness = 0.1
shader_parameter/period = 1.0
shader_parameter/scroll = 1.0
shader_parameter/normal_strength = 0.1
shader_parameter/effect_alpha_mult = 1.0
shader_parameter/direction = 0.5
shader_parameter/gradient = ExtResource("6_twisv")

[node name="MenuCard" instance=ExtResource("1_0h4xo")]
material = ExtResource("2_15rps")
script = ExtResource("3_15rps")

[node name="CardImage" parent="." index="0"]
material = SubResource("ShaderMaterial_gnf8m")

[node name="EntityImage" parent="." index="1"]
texture = null

[node name="Texts" parent="." index="3"]
material = SubResource("ShaderMaterial_twisv")
